# sites_prefeituras

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_JS.md  COMMIT_MESSAGE.txt  DONE.MD  GIT_COMMANDS.md  MIGRATION.md  README.md  README_PYTHON.md  TEST_ADDITIONS_SUMMARY.md  TEST_MIGRATION.md  TODO.md  VULTURE_ANALYSIS.md  about.html  analyze_psi_data.js  babel.config.cjs  collect-accessibility-data.js  collect-psi.js  collect-psi.test.js  index.html  jest.config.cjs  mkdocs.yml  municipal_directory.html  package-lock.json  package.json  psi-collector-config.json  pyproject.toml  pytest.ini  repomix-output-csv-path-resolution.txt  repomix-output-feature-enhanced-logging.txt  script.js  sites_das_prefeituras_brasileira.csv  sites_das_prefeituras_brasileiras.csv  style.css  test_basic.py  test_sites.csv  upload_to_ia.py
.github/: TODO_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  collect-psi.yml  docs.yml  lighthouse-audit.yml  psi.yml  test-psi-collection.yml
__mocks__/: fs.js  node-fetch.js
collector/: collect-psi.js  collect-psi.test.js  jest.config.cjs  package-lock.json  package.json
css/: styles.css
data/: psi-results.csv  psi-results.json  psi_processing_state.json  test-psi-results.json
data/quarantine/: quarantine-2026-01-23.json  quarantine-latest.json
dbt_psi_project/: .user.yml  profiles.yml
dbt_psi_project/psi_analytics/: dbt_project.yml
dbt_psi_project/psi_analytics/models/: sources.yml
dbt_psi_project/psi_analytics/tests/: source_psi_metrics_unique_combination.sql
docs/: arq.md  cli.md  index.md
docs/css/: style.css
docs/data/: by-state.json  quarantine.json  ranking.json  summary.json  worst50.json
docs/desenvolvimento/: setup.md
docs/inicio/: instalacao.md
docs/js/: script.js
js/: chart-generator.js  chart-worker.js  data-processor.js  main.js  map-controller.js
new_site/: script.js  styles.css
src/psi_auditor/: generate_viewable_json.py  upload_to_ia.py
src/sites_prefeituras/: __init__.py  cli.py  collector.py  models.py  schemas.py  storage.py  upload_ia.py
tests/: __init__.py  conftest.py  test_cli.py  test_export_dashboard.py
tests/features/: aggregated_metrics.feature  api_mock.feature  ibis_storage.feature  parallel_chunks.feature  quarantine.feature
tests/step_defs/: __init__.py  test_aggregated_metrics.py  test_api_mock.py  test_ibis_storage.py  test_parallel_chunks.py  test_quarantine.py
