[project]
name = "sites-prefeituras"
version = "0.1.0"
description = "Auditoria de Sites de Prefeituras Brasileiras - Python"
authors = [
    {name = "Franklin Baldo", email = "franklin@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.9.0",
    "ibis-framework[duckdb]>=9.0.0",
    "internetarchive>=3.5.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-bdd>=7.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[project.scripts]
sites-prefeituras = "sites_prefeituras.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N815",  # Pydantic fields must match API response format
    "B008",  # Function call in default argument (standard Typer pattern)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow running",
]